Login as Shop and Changing Product data

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="portal"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- <script src="{%static"build/react.js"%}" defer></script> -->
   </body>
 </html>
